--- a/Cy_01_ModelisationSystemes/Ch_02_ModelisationSLCI/Cy_01_Ch_02_Livret.tex
+++ b/Cy_01_ModelisationSystemes/Ch_02_ModelisationSLCI/Cy_01_Ch_02_Livret.tex
@@ -3,7 +3,7 @@
     pdftitle={Exercices de SII},
     pdfauthor={Xavier Pessoles}]{hyperref}
 
-\newcommand{\repRel}{../../../..}
+\newcommand{\repRel}{../../..}
 \input{\repRel/Style/packages}
 \input{\repRel/Style/new_style}
 \input{\repRel/Style/macros_SII}
