--- a/Cy_01_ModelisationSystemes/Ch_02_ModelisationSLCI/Cy_01_Ch_02_Livret.tex
+++ b/Cy_01_ModelisationSystemes/Ch_02_ModelisationSLCI/Cy_01_Ch_02_Livret.tex
@@ -35,16 +35,16 @@
 \livrettrue
 \input{\repStyle/Cycle_01_Entete}
 
-\graphicspath{{\repStyle/png/}{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/01_Modelisation_Perf_Fiche/images/}}
-\input{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/01_Modelisation_Perf_Fiche/Cy_01_Ch_01_Modelisation_Perf_Fiche.tex}
-
-\newpage
-\graphicspath{{\repStyle/png/}{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/02_Modelisation_Laplace_Fiche/images/}}
-\input{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/02_Modelisation_Laplace_Fiche/Cy_01_Rev_02_Modelisation_Laplace_Fiche.tex}
-
-\newpage
-\graphicspath{{\repStyle/png/}{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/03_Modelisation_Blocs_Fiche/images/}}
-\input{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/03_Modelisation_Blocs_Fiche/Cy_01_Rev_03_Modelisation_Blocs_Fiche.tex}
+%\graphicspath{{\repStyle/png/}{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/01_Modelisation_Perf_Fiche/images/}}
+%\input{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/01_Modelisation_Perf_Fiche/Cy_01_Ch_01_Modelisation_Perf_Fiche.tex}
+%
+%\newpage
+%\graphicspath{{\repStyle/png/}{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/02_Modelisation_Laplace_Fiche/images/}}
+%\input{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/02_Modelisation_Laplace_Fiche/Cy_01_Rev_02_Modelisation_Laplace_Fiche.tex}
+%
+%\newpage
+%\graphicspath{{\repStyle/png/}{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/03_Modelisation_Blocs_Fiche/images/}}
+%\input{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/03_Modelisation_Blocs_Fiche/Cy_01_Rev_03_Modelisation_Blocs_Fiche.tex}
 
 \newpage
 \graphicspath{{\repStyle/png/}{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/04_Modelisation_Ordre12_Fiche/images/}}
@@ -105,7 +105,3 @@
 \input{\repRel/PSI_Cy_01_ModelisationSystemes/Ch_02_RevisionsSLCI/\repExo/\repExo.tex}
 
 \end{document}
-
-
-
-j
